--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Agora, Fella</title>
+    <link rel="stylesheet" href="CSS/estilo.css">
 </head>
 <body>
-    
+    <div class="geral0">
+    <h1 class="fotoperfil">Foto de Perfil</h1>
+    <input type="button" class="sairconta" value="Sair da conta">
+    </div>
+    <div class="geral">
+        <div class="abaesquerda">
+            <input type="button" value="Nome de usuário" class="username">
+            <input type="button" value="Tipo Sanguíneo" class="bloodtype">
+            <input type="button" value="Região" class="location">
+            <input type="button" value="Email" class="email">
+            <input type="button" value="Número" class="number">
+            
+        </div>
+        <div class="sobre">
+            <h3 class="sobretitulo">Sobre mim...</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt perspiciatis mollitia omnis nemo aliquam veniam, maxime voluptatum minus modi quibusdam aut! Eius ex quidem ratione! Libero modi laudantium officiis sint!</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt perspiciatis mollitia omnis nemo aliquam veniam, maxime voluptatum minus modi quibusdam aut! Eius ex quidem ratione! Libero modi laudantium officiis sint!</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt perspiciatis mollitia omnis nemo aliquam veniam, maxime voluptatum minus modi quibusdam aut! Eius ex quidem ratione! Libero modi laudantium officiis sint!</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt perspiciatis mollitia omnis nemo aliquam veniam, maxime voluptatum minus modi quibusdam aut! Eius ex quidem ratione! Libero modi laudantium officiis sint!</p>
+
+        </div>
+    </div>
+    <div class="geral1">
+        <h3>Histórico de doações / recepções</h3>
+    </div>
+    <div class="testemunhos">
+        <h3 class="titulotestemunho">Meus testemunhos</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius eum ut nesciunt animi minima eligendi, ratione nam est magni libero voluptates nisi placeat laudantium quidem dolores aliquam consequuntur. Deleniti, minus.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius eum ut nesciunt animi minima eligendi, ratione nam est magni libero voluptates nisi placeat laudantium quidem dolores aliquam consequuntur. Deleniti, minus.</p>
+    </div>
 </body>
 </html>
