--- a/index.html
+++ b/index.html
@@ -9,34 +9,57 @@
 </head>
 <body>
     <div class="geral0">
-    <h1 class="fotoperfil">Foto de Perfil</h1>
-    <input type="button" class="sairconta" value="Sair da conta">
+        <input type="button" value="Voltar" class="voltar">
+        <img src="img/foto_perfil.jpg" alt="Foto de Perfil" class="fotoperfil">
+        <h1 class="titulogeral0">Meu Perfil</h1>
+        <input type="button" class="sairconta" value="Sair da conta">
     </div>
     <div class="geral">
         <div class="abaesquerda">
-            <input type="button" value="Nome de usuário" class="username">
-            <input type="button" value="Tipo Sanguíneo" class="bloodtype">
-            <input type="button" value="Região" class="location">
-            <input type="button" value="Email" class="email">
-            <input type="button" value="Número" class="number">
-            
+            <input type="text" class="username" placeholder="Nome de usuário">
+            <input type="text" class="bloodtype" placeholder="Tipo sanguíneo">
+            <input type="text" class="location" placeholder="Região">
+            <input type="text" class="email" placeholder="Email">
+            <input type="text" class="number" placeholder="Número">
         </div>
         <div class="sobre">
             <h3 class="sobretitulo">Sobre mim...</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt perspiciatis mollitia omnis nemo aliquam veniam, maxime voluptatum minus modi quibusdam aut! Eius ex quidem ratione! Libero modi laudantium officiis sint!</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt perspiciatis mollitia omnis nemo aliquam veniam, maxime voluptatum minus modi quibusdam aut! Eius ex quidem ratione! Libero modi laudantium officiis sint!</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt perspiciatis mollitia omnis nemo aliquam veniam, maxime voluptatum minus modi quibusdam aut! Eius ex quidem ratione! Libero modi laudantium officiis sint!</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt perspiciatis mollitia omnis nemo aliquam veniam, maxime voluptatum minus modi quibusdam aut! Eius ex quidem ratione! Libero modi laudantium officiis sint!</p>
-
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem dolorum qui veniam accusantium dolorem
+                corporis mollitia voluptates illum deleniti incidunt ratione numquam in ipsa est, fuga possimus nisi
+                nihil aperiam.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem dolorum qui veniam accusantium dolorem
+                corporis mollitia voluptates illum deleniti incidunt ratione numquam in ipsa est, fuga possimus nisi
+                nihil aperiam.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem dolorum qui veniam accusantium dolorem
+                corporis mollitia voluptates illum deleniti incidunt ratione numquam in ipsa est, fuga possimus nisi
+                nihil aperiam.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem dolorum qui veniam accusantium dolorem
+                corporis mollitia voluptates illum deleniti incidunt ratione numquam in ipsa est, fuga possimus nisi
+                nihil aperiam.</p>
         </div>
     </div>
     <div class="geral1">
-        <h3>Histórico de doações / recepções</h3>
-    </div>
-    <div class="testemunhos">
-        <h3 class="titulotestemunho">Meus testemunhos</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius eum ut nesciunt animi minima eligendi, ratione nam est magni libero voluptates nisi placeat laudantium quidem dolores aliquam consequuntur. Deleniti, minus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius eum ut nesciunt animi minima eligendi, ratione nam est magni libero voluptates nisi placeat laudantium quidem dolores aliquam consequuntur. Deleniti, minus.</p>
+        <h3 class="historico">Histórico de doações / recepções</h3>
+        <div>
+            <p>Ação: Recepção <br>
+                Data: 19/05/2023 <br>
+                Hospital: CentroH <br>
+                Doador: SenhorY <br>
+                -------------------------------------
+            </p>
+            <p>Ação: Recepção <br>
+                Data: 22/03/2023 <br>
+                Hospital: CentroZ <br>
+                Doador: SenhoraX <br>
+                -------------------------------------
+            </p>
+            <p>Ação: Recepção <br>
+                Data: 12/01/2023 <br>
+                Hospital: CentroP <br>
+                Doador: SenhorJ <br>
+                -------------------------------------
+            </p>
+        </div>
     </div>
 </body>
 </html>
