--- a/perfil.html
+++ b/perfil.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil</title>
-    <link rel="stylesheet" href="CSS/estilo.css">
+    <link rel="stylesheet" href="perfil.css">
 </head>
+
 <body>
     <div class="geral0">
-        <input type="button" value="Voltar" class="voltar">
+        <a href="principal.html"><button class="voltar">Voltar</button></a>
         <img src="img/foto_perfil.jpg" alt="Foto de Perfil" class="fotoperfil">
         <h1 class="titulogeral0">Meu Perfil</h1>
-        <input type="button" class="sairconta" value="Sair da conta">
+        <a href="login.html"><button id="sair" class="sairconta">Sair da conta</button></a>
     </div>
     <div class="geral">
         <div class="abaesquerda">
@@ -61,5 +63,7 @@
             </p>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
+
 </html>
