--- a/perfil.html
+++ b/perfil.html
@@ -18,26 +18,45 @@
     </div>
     <div class="geral">
         <div class="abaesquerda">
-            <input type="text" class="username" placeholder="Nome de usuário">
-            <input type="text" class="bloodtype" placeholder="Tipo sanguíneo">
-            <input type="text" class="location" placeholder="Região">
-            <input type="text" class="email" placeholder="Email">
-            <input type="text" class="number" placeholder="Número">
+            <h4 style="margin-left: 15px;">Nome de Usuário</h4>
+            <h4 contenteditable="true" class="username">Nome de Usuário</h4>
+            <h4 style="margin-left: 15px;">Tipo sanguíneo</h4>
+            <h4 contenteditable="true" class="bloodtype"></h4>
+            <h4 style="margin-left: 15px;">Localização</h4>
+            <h4 contenteditable="true" class="location"></h4>
+            <h4 style="margin-left: 15px;">Email</h4>
+            <h4 contenteditable="true" class="email"></h4>
+            <h4 style="margin-left: 15px;">Número</h4>
+            <h4 contenteditable="true" class="number"></h4>
         </div>
         <div class="sobre">
             <h3 class="sobretitulo">Sobre mim...</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem dolorum qui veniam accusantium dolorem
-                corporis mollitia voluptates illum deleniti incidunt ratione numquam in ipsa est, fuga possimus nisi
-                nihil aperiam.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem dolorum qui veniam accusantium dolorem
-                corporis mollitia voluptates illum deleniti incidunt ratione numquam in ipsa est, fuga possimus nisi
-                nihil aperiam.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem dolorum qui veniam accusantium dolorem
-                corporis mollitia voluptates illum deleniti incidunt ratione numquam in ipsa est, fuga possimus nisi
-                nihil aperiam.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem dolorum qui veniam accusantium dolorem
-                corporis mollitia voluptates illum deleniti incidunt ratione numquam in ipsa est, fuga possimus nisi
-                nihil aperiam.</p>
+            <p contenteditable="true" class="editable" style="font-size: 18px;">Olá! Me chamo Ana e sou uma entusiasta da doação de sangue.
+                Acredito que doar sangue é uma forma poderosa de ajudar outras pessoas e salvar vidas.
+                Olá! Meu nome é Ana e estou muito feliz em compartilhar um pouco sobre mim com vocês.
+                Desde jovem, sempre fui apaixonada por aprender e explorar o mundo ao meu redor. Me formei com honras em
+                Ciências Biológicas, com ênfase em Genética, na Universidade de Harvard. Durante minha graduação,
+                participei de vários projetos de pesquisa, nos quais tive a oportunidade de mergulhar no fascinante
+                mundo da genética e suas aplicações. Também sou membro de uma organização não governamental que promove
+                a conscientização sobre a importância da doação de sangue e medula óssea. Essa experiência tem sido
+                incrivelmente gratificante, pois vejo de perto o impacto positivo que a doação pode ter na vida de
+                indivíduos em situações vulneráveis. Atualmente, trabalho como cientista pesquisadora em um renomado
+                laboratório de biotecnologia. Minhas responsabilidades incluem o desenvolvimento de novas terapias
+                genéticas, a condução de experimentos e a
+                análise de dados genômicos. Estou constantemente atualizada sobre as mais recentes descobertas
+                científicas e tecnológicas na área, pois acredito que a inovação é fundamental para impulsionar avanços
+                na medicina e melhorar a qualidade de vida das pessoas.
+                Além do meu trabalho como cientista, também dedico parte do meu tempo a compartilhar meu conhecimento
+                por meio de palestras e workshops em instituições de ensino e conferências científicas. Tenho prazer em
+                inspirar e motivar as futuras gerações de cientistas, incentivando-as a explorar e descobrir o mundo da
+                ciência. No meu tempo livre, adoro praticar esportes ao ar livre, como trilhas e corridas, para manter
+                meu corpo e mente saudáveis. Vamos juntos fazer a diferença! Sempre tive o desejo de contribuir de
+                alguma forma para a sociedade, e a doação de sangue é uma maneiraprática e gratificante de fazer a
+                diferença.
+                Já realizei várias doações ao longo dos anos e me sinto feliz em saber que meu sangue pode ser utilizado
+                para ajudar pacientes em situações de emergência, cirurgias e tratamentos médicos.
+                Além disso, incentivo meus amigos e familiares a se juntarem a mim nessa nobre causa, pois quanto mais
+                pessoas doarem, maior será o impacto positivo que podemos causar na vida de quem precisa.</p>
         </div>
     </div>
     <div class="geral1">
@@ -63,7 +82,7 @@
             </p>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="perfil.js"></script>
 </body>
 
 </html>
