--- a/principal.html
+++ b/principal.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html lang='pt'>
-  <head lang="pt-br">
-    <title>BloodBridge</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width-device-width, initial-scale-1.0" >
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-    <link rel="stylesheet" href="principal.css">
-    <link rel="shortcut icon" href="img/cruz-vermelha-removebg-preview.png">
-  </head>
+<html lang="pt">
 
-  <body>
-    <div class="geral0">
-      <input type="button" value="Voltar" class="voltar">
-      <img src="img/cruz-vermelha-removebg-preview.png" alt="Foto de Perfil" class="fotoperfil">
-      <h1 class="titulogeral0">BloodBridge</h1>
-      <a href="login.html"><input type="button" class="sairconta" value="Sair da conta"></a>
+<head lang="pt-br">
+  <title>BloodBridge</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width-device-width, initial-scale-1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+  <link rel="stylesheet" href="principal.css">
+  <link rel="shortcut icon" href="img/cruz-vermelha-removebg-preview.png">
+</head>
+
+<body>
+  <div class="geral0">
+    <input type="button" value="Voltar" class="voltar">
+    <img src="img/cruz-vermelha-removebg-preview.png" alt="Foto de Perfil" class="fotoperfil">
+    <h1 class="titulogeral0">BloodBridge</h1>
+    <a href="login.html"><input type="button" class="sairconta" value="Sair da conta"></a>
   </div>
-    <header>
-    
-      <nav class="menu">
+  <header>
+    <nav class="menu">
       <ul>
         <li><a href="curiosidades.html" class="men">Notificações</a></li><br>
         <li><a href="perfil.html" class="men">Perfil</a></li><br>
@@ -27,23 +27,27 @@
         <li><a href="historico.html" class="men">Histórico</a></li><br>
         <li><a href="calendario.html" class="men">Calendário</a></li><br>
         <li><a href="dicas.html" class="men">Dicas</a></li><br>
-        </ul>
-      </nav>
-      <main>
-
+      </ul>
+    </nav>
+    <main>
       <div class="sobre">
-        <h3 class="sobretitulo">Espaço Destinado ao Mapa Interativo</h3><br>
-       <h1>{MapaInterativo}</h1>
-    </div>
+        <!--<h3 class="sobretitulo">Espaço Destinado ao Mapa Interativo</h3><br>-->
+        <div id="map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d155954.5459577989!2d-122.4194155!3d37.7749295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f7e5f1f8a30d3%3A0x17b3ee3f4b2a1a41!2sSan%20Francisco%2C%20CA%2C%20USA!5e0!3m2!1sen!2sca!4v1568813846765!5m2!1sen!2sca"
+            width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+      </div>
       <div class="geral1">
         <h3 style="margin-top: 15px;">Usuários</h3>
         <div>
-            <p style="text-align: center; margin-top: 10px;">Filtros<br></p>
-            -----------------------------------------
-           
+          <p style="text-align: center; margin-top: 20px;">Filtros<br></p>
+          -----------------------------------------
         </div>
-    </div>
+      </div>
     </main>
-    </header>
-  </body>
+  </header>
+  <script src="principal.js"></script>
+</body>
+
 </html>
