--- a/perfil.html
+++ b/perfil.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil</title>
     <link rel="stylesheet" href="perfil.css">
+    <link rel="shortcut icon" href="img/cruz-vermelha-removebg-preview.png">
+</head>
 </head>
 
 <body>
