melhorei as dicas

--- a/dicas.html
+++ b/dicas.html
@@ -33,33 +33,33 @@
       <div class="sobre">
         <h3 class="sobretitulo"> Aqui estão algumas dicas sobre doação de sangue:</h3>
         <p>Verifique os requisitos: Antes de doar sangue, verifique os requisitos básicos, como idade mínima, peso
-          mínimo e boas condições de saúde. As restrições podem variar em diferentes países e locais.
+          mínimo e boas condições de saúde. As restrições podem variar em diferentes países e locais.</p><br>
 
-          Esteja descansado e bem alimentado: Certifique-se de descansar o suficiente na noite anterior à doação e tome
-          um café da manhã ou almoço nutritivo no dia da doação. Evite alimentos gordurosos antes da doação.
+        <p>Esteja descansado e bem alimentado: Certifique-se de descansar o suficiente na noite anterior à doação e tome
+            um café da manhã ou almoço nutritivo no dia da doação. Evite alimentos gordurosos antes da doação.</p><br>
 
-          Hidrate-se: Beba bastante líquido nas 24 horas anteriores à doação de sangue. Isso ajudará a garantir que você
-          tenha um volume adequado de sangue para doar.
+        <p>Hidrate-se: Beba bastante líquido nas 24 horas anteriores à doação de sangue. Isso ajudará a garantir que você
+            tenha um volume adequado de sangue para doar.</p><br>
 
-          Traga documentos de identificação: Leve um documento de identificação válido, como carteira de identidade,
-          carteira de motorista ou passaporte, para a doação.
+        <p>Traga documentos de identificação: Leve um documento de identificação válido, como carteira de identidade,
+            carteira de motorista ou passaporte, para a doação.</p><br>
 
-          Informe sobre medicamentos: Se estiver tomando algum medicamento regularmente, informe a equipe de doação de
-          sangue. Alguns medicamentos podem impedir temporariamente a doação de sangue.
+          <p>Informe sobre medicamentos: Se estiver tomando algum medicamento regularmente, informe a equipe de doação de
+          sangue. Alguns medicamentos podem impedir temporariamente a doação de sangue.</p><br>
 
-          Evite bebidas alcoólicas: Evite consumir álcool nas 24 horas anteriores à doação, pois isso pode afetar a
-          qualidade do sangue coletado.
+          <p>Evite bebidas alcoólicas: Evite consumir álcool nas 24 horas anteriores à doação, pois isso pode afetar a
+            qualidade do sangue coletado.</p><br>
 
-          Siga as instruções após a doação: Após a doação, siga as instruções dadas pela equipe de doação de sangue.
-          Isso pode incluir descansar por alguns minutos, manter o curativo no local da punção e evitar atividades
-          intensas por algumas horas.
+          <p>Siga as instruções após a doação: Após a doação, siga as instruções dadas pela equipe de doação de sangue.
+            Isso pode incluir descansar por alguns minutos, manter o curativo no local da punção e evitar atividades
+            intensas por algumas horas.</p><br>
 
-          Mantenha um estilo de vida saudável: Manter uma alimentação balanceada, fazer exercícios regularmente e evitar
-          hábitos prejudiciais, como fumar, ajudará a garantir que você esteja sempre apto para doar sangue.
+          <p>Mantenha um estilo de vida saudável: Manter uma alimentação balanceada, fazer exercícios regularmente e evitar
+            hábitos prejudiciais, como fumar, ajudará a garantir que você esteja sempre apto para doar sangue.</p><br>
 
-          Lembrando que essas são apenas orientações gerais. É importante seguir as instruções específicas fornecidas
-          pelas instituições de doação de sangue em sua região. A doação de sangue é um gesto nobre que pode salvar
-          vidas, portanto, se você estiver apto, considere se tornar um doador regular.</p>
+          <p>Lembrando que essas são apenas orientações gerais. É importante seguir as instruções específicas fornecidas
+            pelas instituições de doação de sangue em sua região. A doação de sangue é um gesto nobre que pode salvar
+            vidas, portanto, se você estiver apto, considere se tornar um doador regular.</p><br>
       </div>
     </main>
   </header>
