--- a/principal.html
+++ b/principal.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="img/cruz-vermelha-removebg-preview.png">
   <link rel="stylesheet" href="principal.css">
-
+  <script src="principal.js"></script>
 </head>
 
 <body>
@@ -51,7 +51,7 @@
       <!-- Formulário de Registro de Notícias -->
       <div class="registro-noticia">
         <h3>Registrar Nova Notícia</h3>
-        <form action="processar_noticia.php" method="POST">
+        <form onsubmit="salvarNoticia(event)">
           <label for="identificacao">Identificação:</label>
           <input type="text" id="identificacao" name="identificacao" required><br><br>
           <label for="titulo">Título:</label>
@@ -66,7 +66,57 @@
       
     </main>
   </header>
-  <script src="principal.js"></script>
+  
+  <script>
+    // Função para salvar a notícia no Local Storage
+    function salvarNoticia(event) {
+      event.preventDefault();
+
+      // Obtenha os dados da notícia a partir do formulário
+      var id = document.getElementById('identificacao').value;
+      var titulo = document.getElementById('titulo').value;
+      var conteudo = document.getElementById('conteudo').value;
+      var autor = document.getElementById('autor').value;
+
+      // Crie um objeto para representar a notícia
+      var noticia = {
+        id: id,
+        titulo: titulo,
+        conteudo: conteudo,
+        autor: autor
+      };
+
+      // Converta o objeto em uma string JSON
+      var noticiaJSON = JSON.stringify(noticia);
+
+      // Salve a notícia no Local Storage
+      localStorage.setItem('noticia', noticiaJSON);
+
+      // Exiba uma mensagem de sucesso
+      alert('Notícia salva com sucesso!');
+    }
+
+    // Função para recuperar a notícia do Local Storage
+    function recuperarNoticia() {
+      // Recupere a notícia do Local Storage
+      var noticiaJSON = localStorage.getItem('noticia');
+
+      // Verifique se a notícia existe
+      if (noticiaJSON) {
+        // Converta a string JSON de volta para um objeto
+        var noticia = JSON.parse(noticiaJSON);
+
+        // Preencha o formulário com os dados da notícia
+        document.getElementById('identificacao').value = noticia.id;
+        document.getElementById('titulo').value = noticia.titulo;
+        document.getElementById('conteudo').value = noticia.conteudo;
+        document.getElementById('autor').value = noticia.autor;
+      }
+    }
+
+    // Chame a função de recuperação ao carregar a página
+    window.onload = recuperarNoticia;
+  </script>
 </body>
 
 </html>
